# TreeReader

./: .gitmodules  CMakeLists.txt  Create-Solution.cmd  README.md  TreeReader.sln
QtAdditions/: CMakeLists.txt  QWidgetDragWidget.cpp  QWidgetDragWidget.h  QWidgetListItem.cpp  QWidgetListItem.h  QWidgetListMimeData.h  QWidgetListWidget.cpp  QWidgetListWidget.h  QWidgetScrollListWidget.h  QtUtilities.cpp  QtUtilities.h
QtAdditions/inc/dak/QtAdditions/: QWidgetListItem.h  QWidgetListMimeData.h  QWidgetListWidget.h  QWidgetScrollListWidget.h  QtUtilities.h
QtAdditions/src/: QWidgetListItem.cpp  QWidgetListWidget.cpp  QWidgetScrollListWidget.cpp  QtUtilities.cpp
TreeFilter/: CMakeLists.txt  TreeFilter.cpp  TreeFilter.vcxproj  TreeFilter.vcxproj.filters
TreeFilterApp/: CMakeLists.txt  FilterEditor.cpp  FilterEditor.h  FiltersEditor.cpp  FiltersEditor.h  KnownFiltersModel.cpp  KnownFiltersModel.h  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  OptionsDialog.h  QtUtilities.cpp  QtUtilities.h  Resource.rc  TextTreeModel.cpp  TextTreeModel.h  TextTreeSubWindow.cpp  TextTreeSubWindow.h  ToDo.txt  TreeFilterApp.cpp  TreeFilterApp_fr.ts  TreeFilterDragWidget.cpp  TreeFilterDragWidget.h  TreeFilterItem.cpp  TreeFilterItem.h  TreeFilterListItem.cpp  TreeFilterListItem.h  TreeFilterListWidget.cpp  TreeFilterListWidget.h  TreeFilterMimeData.h  TreeFilterModel.cpp  TreeFilterModel.h  TreeFilterPanel.cpp  TreeFilterPanel.h  TreeFilterWidget.cpp  TreeFilterWidget.h  UndoStack.cpp  UndoStack.h  mainwindow.ui  resource.h
TreeReader/: BuffersTextHolder.cpp  BuffersTextHolder.h  CMakeLists.txt  GlobalCommands.h  NamedFilters.cpp  NamedFilters.h  SimpleTreeFilterMaker.cpp  SimpleTreeReader.cpp  SimpleTreeReader.h  SimpleTreeWriter.h  TextFilter.cpp  TextFilter.h  TextLinesTextHolder.h  TextTree.cpp  TextTree.h  TextTreeVisitor.cpp  TextTreeVisitor.h  TreeCommands.cpp  TreeCommands.h  TreeFilter.cpp  TreeFilter.h  TreeFilterCommandLine.cpp  TreeFilterCommandLine.h  TreeFilterCommands.cpp  TreeFilterCommands.h  TreeFilterHelpers.cpp  TreeFilterHelpers.h  TreeFilterMaker.cpp  TreeFilterMaker.h  TreeFiltering.cpp  TreeFiltering.h  TreeReader.cpp  TreeReader.h  TreeReader.vcxproj  TreeReader.vcxproj.filters  TreeReaderHelpers.cpp  TreeReaderHelpers.h  UndoStack.cpp  UndoStack.h
TreeReaderTests/: CMakeLists.txt  NamedFiltersTests.cpp  SimplerTreeReaderTests.cpp  TextTreeTests.cpp  TreeFilterAcceptTests.cpp  TreeFilterCommandsTests.cpp  TreeFilterMakerTests.cpp  TreeFilterTests.cpp  TreeReaderHelpersTests.cpp  TreeReaderTestHelpers.cpp  TreeReaderTestHelpers.h  TreeReaderTests.cpp  TreeReaderTests.vcxproj  TreeReaderTests.vcxproj.filters
tree_filter/: CMakeLists.txt  tree_filter.cpp
tree_filter_app/: CMakeLists.txt  ToDo.txt  filter_editor.cpp  filter_editor.h  main_window.cpp  main_window.h  options_dialog.cpp  options_dialog.h  text_tree_model.cpp  text_tree_model.h  text_tree_sub_window.cpp  text_tree_sub_window.h  tree_filter_app.cpp  tree_filter_app_fr.ts  tree_filter_list_item.cpp  tree_filter_list_item.h  tree_filter_list_widget.cpp  tree_filter_list_widget.h
tree_reader/: CMakeLists.txt
tree_reader/inc/dak/tree_reader/: buffers_text_holder.h  global_commands.h  named_filters.h  simple_tree_reader.h  simple_tree_writer.h  text.h  text_lines_text_holder.h  text_tree.h  text_tree_visitor.h  tree_commands.h  tree_filter.h  tree_filter_command_line.h  tree_filter_helpers.h  tree_filter_maker.h  tree_filtering.h  tree_reader.h
tree_reader/inc/dak/utility/: exceptions.h  text.h  undo_stack.h
tree_reader/src/: buffers_text_holder.cpp  global_commands.cpp  named_filters.cpp  simple_tree_filter_maker.cpp  simple_tree_reader.cpp  simple_tree_writer.cpp  text.cpp  text_tree.cpp  text_tree_visitor.cpp  tree_commands.cpp  tree_filter.cpp  tree_filter_command_line.cpp  tree_filter_helpers.cpp  tree_filter_maker.cpp  tree_filtering.cpp  undo_stack.cpp
tree_reader_tests/: CMakeLists.txt  named_filters_tests.cpp  simple_tree_reader_tests.cpp  text_tests.cpp  text_tree_tests.cpp  text_tree_visitor_tests.cpp  tree_filter_commands_tests.cpp  tree_filter_maker_tests.cpp  tree_filter_tests.cpp  tree_reader_test_helpers.cpp  tree_reader_test_helpers.h  undo_stack_tests.cpp
